--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,18 +84,12 @@ dependencies {
     // Assertions
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
-    // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-    // CameraX
-//    implementation "androidx.camera:camera-camera2:1.0.0-SNAPSHOT"
-//    implementation "androidx.camera:camera-lifecycle:1.0.0-SNAPSHOT"
-//    implementation "androidx.camera:camera-view:1.0.0-SNAPSHOT"
 
     // Koin
     implementation "org.koin:koin-android:2.0.1"
@@ -108,6 +102,8 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
 }
 
 configurations {
