--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 23 10:13:52 IST 2021
-sdk.dir=C\:\\Users\\sai\\AppData\\Local\\Android\\Sdk
+#Fri Jun 25 10:10:00 IST 2021
+sdk.dir=C\:\\Users\\wmk-11\\AppData\\Local\\Android\\Sdk
