--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name="com.google.mlkit.showstatus.UpdateStatusActivity"></activity>
+        <activity android:name="com.google.mlkit.laguage.SelectLanguageActivity" android:theme="@style/AppTheme" />
+        <activity android:name="com.google.mlkit.showstatus.UpdateStatusActivity" />
         <activity android:name="com.google.mlkit.showstatus.ShowStatusActivity" />
         <activity
             android:name="com.google.mlkit.home.HomeActivity"
@@ -59,9 +60,6 @@
             android:name=".kotlin.CameraXLivePreviewActivity"
             android:exported="true"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".preference.SettingsActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
